--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,42 +1,30 @@
+run:
+  timeout: 60m
+  go: 1.17
+
+issues:
+  max-per-linter: 0
+  max-same-issues: 0
+
 linters:
-  # please, do not use `enable-all`: it's deprecated and will be removed soon.
-  # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
-  disable-all: false
-  disable:
-    - typecheck
+  disable-all: true
   enable:
-    - bodyclose
+    - asciicheck
     - deadcode
-    - depguard
-    - dogsled
-#    - dupl
     - errcheck
-#    - funlen
-    - gochecknoinits
-    - goconst
     - gocritic
-    - gocyclo
-    - gofmt
     - goimports
-    - golint
-#    - gomnd
-    - goprintffuncname
-    - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
-#    - lll
-    - misspell
     - nakedret
-    - rowserrcheck
-    - scopelint
+    - misspell
     - staticcheck
     - structcheck
-    - stylecheck
-#    - typecheck
+    - typecheck
+    - unused
     - unconvert
     - unparam
-    - unused
     - varcheck
-#    - whitespace
+    - vet
+    - vetshadow
