--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,7 +8,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - '-s -w -X main.AppVersion={{.Version}}'
+      - '-s -w -X gcorecloud.AppVersion={{.Version}}'
     goos:
       - windows
       - linux
