--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,10 @@ jobs:
           go-version: 1.21
 
       - name: Build
-        run: go build -v ./...
+        run: make build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: gcoreclient
-          path: ./gcoreclient
+          path: gcoreclient
