--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,15 @@ jobs:
         with:
           go-version: 1.21
 
-      - name: Build
-        run: make build
+      - name: Build darwin/arm64
+        run: make build-with-dist GOOS=darwin GOARCH=arm64
+
+      - name: Build windows/amd64
+        run: make build-with-dist GOOS=windows GOARCH=amd64
 
       - name: Upload Artifact
+        # if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: gcoreclient
-          path: gcoreclient
+          path: gcoreclient*
