--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: build
 
 on:
   push:
-    branches: [ master, main, test-artifacts-upload ]
+    branches: [ master, main ]
   pull_request:
     branches: [ master, main ]
 
@@ -24,7 +24,6 @@ jobs:
         run: make build-with-dist GOOS=windows GOARCH=amd64
 
       - name: Upload Artifact
-        # if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: gcoreclient
