--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,14 @@ jobs:
         with:
           go-version: 1.21
 
-      - name: Build
-        run: go build -v ./...
+      - name: Build darwin/arm64
+        run: make build-with-dist GOOS=darwin GOARCH=arm64
+
+      - name: Build windows/amd64
+        run: make build-with-dist GOOS=windows GOARCH=amd64
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: gcoreclient
+          path: gcoreclient*
