--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,12 @@ jobs:
       - name: Build windows/amd64
         run: make build-with-dist GOOS=windows GOARCH=amd64
 
+      - name: Set truncated SHA
+        id: vars
+        run: echo "::set-output name=short_sha::${GITHUB_SHA::8}"
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: gcoreclient-${{ github.sha }}
+          name: gcoreclient-${{ steps.vars.outputs.short_sha }}
           path: gcoreclient*
