--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,11 @@ jobs:
       - name: Build windows/amd64
         run: make build-with-dist GOOS=windows GOARCH=amd64
 
+      - name: Set truncated SHA as environment variable
+        run: echo "SHORT_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: gcoreclient
+          name: gcoreclient-${{ env.SHORT_SHA }}
           path: gcoreclient*
